--- a/DD/main/EffortSpent.tex
+++ b/DD/main/EffortSpent.tex
@@ -6,30 +6,22 @@
         \hline
         \textbf{Topic}                                                             & \textbf{Hours} \\
         \hline
-        Preliminary Discussion                                                     & 6              \\
+        Preliminary Discussion                                                     & 10              \\
         \hline
-        Introduction                                                               & 4              \\
+        Introduction                                                               & 2              \\
         \hline
-        Product Perspective                                                        & 6              \\
+        Architectural Design                                                        & 9              \\
         \hline
-        Product Functions                                                          & 1              \\
+        User Design Interface		                                                & 1              \\
         \hline
-        User Characteristics                                                       & 2              \\
+        Requirements Traceability		                                            & 2              \\
         \hline
-        Assumptions, Dependencies and Constraints                                  & 1              \\
+        Implementation, Integration and Test Plan                                    & 11              \\
         \hline
-        External Interface Requirements                                            & 2              \\
-        \hline
-        Functional Requirements                                                    & 5              \\
-        \hline
-        Performance Requirements / Design Constraints / Software System Attributes & 5              \\
-        \hline
-        Alloy Code                                                                 & 12             \\
-        \hline
-        Revision                                                                   & 4              \\
+        Revision                                                                   & 6              \\
         \hline
         \hline
-        \textbf{Total:}                                                            & 48             \\
+        \textbf{Total:}                                                            & 41             \\
         \hline
     \end{tabular}
     \caption{Effort spent by Jas Valencic.}
@@ -41,30 +33,22 @@
         \hline
         \textbf{Topic}                                                             & \textbf{Hours} \\
         \hline
-        Preliminary Discussion                                                     & 6              \\
+        Preliminary Discussion                                                     & 10              \\
         \hline
-        Introduction                                                               & 3              \\
+        Introduction                                                               & 1              \\
         \hline
-        Product Perspective                                                        & 3              \\
+        Architectural Design                                                        & 12              \\
         \hline
-        Product Functions                                                          & 3              \\
+        User Design Interface		                                                & 3              \\
         \hline
-        User Characteristics                                                       & 1              \\
+        Requirements Traceability		                                            & 1              \\
         \hline
-        Assumptions, Dependencies and Constraints                                  & 2              \\
+        Implementation, Integration and Test Plan                                    & 6              \\
         \hline
-        External Interface Requirements                                            & 8              \\
-        \hline
-        Functional Requirements                                                    & 10             \\
-        \hline
-        Performance Requirements / Design Constraints / Software System Attributes & 3              \\
-        \hline
-        Alloy Code                                                                 & 5              \\
-        \hline
-        Revision                                                                   & 4              \\
+        Revision                                                                   & 8              \\
         \hline
         \hline
-        \textbf{Total:}                                                            & 48             \\
+        \textbf{Total:}                                                            & 41             \\
         \hline
     \end{tabular}
     \caption{Effort spent by Damiano Derin.}
