--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -5,7 +5,7 @@
 
 \subsection{Description of the Given Problem}
 
-Our application helps stores to prevent the diffusion of a virus, in a global pandemic situation, keeping customers in safety conditions.
+The service helps stores to prevent the diffusion of a virus, in a global pandemic situation, keeping customers in safety conditions.
 One of means to contribute to the success of this goal is to guarantee the absence of crowds.
 Considered one store, and established the maximum number of people that are allowed to be inside, our application is an instrument to keep the influx of people below that threshold.
 It works managing automatically the influx of people inside the store, staggering the entrances in the store by using some parameters to keep them safe.
@@ -116,9 +116,9 @@ For the last main phenomena, the system also predicts the department that are us
     Store Manager & a person who is in charge of the store. In our context, we assume that the \textit{store manager} controls the entrances to the store with the help of \gls{clup} service. In the real world scenario this activity can be delegated, without loss of generality.\\ \\
     Physical Spot & a digital device positioned outside the store that allows customers to obtain tickets to line up.\\ \\
     User & a virtual entity that interacts with the virtual service offered by \gls{clup}. The user can be a customers, a store manager and a physical spot (when it is acting as proxy). In case of ambiguous interpretations, we will specify the real entity name.\\ \\
-\end{tabularx}
+%\end{tabularx}
 % splitting table, it was too big.
-\begin{tabularx}{\textwidth}{ >{\hsize=0.2\textwidth}X >{\hsize=0.8\textwidth}X}
+%\begin{tabularx}{\textwidth}{ >{\hsize=0.2\textwidth}X >{\hsize=0.8\textwidth}X}
     Proxy          & an intermediary entity that exchanges information between two other entities. In our system, the physical spot can be seen as a proxy, since it allows customers to line up without the necessity to create an user account. From the point of view of the server, the physical spot is seen as an user. \\ \\
     Virtual Queue & a queue of users allocated in the memory of the server. When a user asks for a lining up operation, or a booking a visit operation, it is allocated in this queue.\\ \\
     Physical Queue & a queue of customers outside the store.\\ \\
